[package]
name = "cardinal_viewports"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = { workspace = true, features = ["callstack", "default", "log"] }
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

winit.workspace = true
once_cell = "1.21.3"
log.workspace = true
display-info = "0.5.4"

[[bin]]
name = "cardinal_viewports"
path = "main.rs"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
